# AgentLoop

./: .env.example  .gitignore  README.md  pyproject.toml  run_research.py
design/: 1_hypothesis.json  2_dag.json  3_execution_log.json  4_skill.yaml  5_human_as_api_example.md  6_evaluator_config.yaml  7_poem_hypothesis.json  8_poem_dag.json  9_poem_execution_log.json  README.md
src/agentloop/: __init__.py  cost_tracker.py  models.yaml
src/agentloop/executor/: __init__.py  checkpoint.py  executor.py  state.py
src/agentloop/executor/nodes/: __init__.py  base.py  bash.py  file.py  gate.py  llm.py  loop.py  python.py
src/agentloop/executor/nodes/core_scripts/: json_merge.py  quick_evaluate.py  select_best_by_score.py
src/agentloop/providers/: __init__.py  base.py  human.py  local.py  openrouter.py  registry.py  zai.py
src/agentloop/research/: __init__.py  builder.py  evaluator.py  hypothesis.py  orchestrator.py  skill_library.py
src/agentloop/tools/: __init__.py  base.py  catalog.py  core.py  known_tools.yaml  safety.py  scanner.py  steward.py
tests/: test_executor.py  test_providers.py  test_research.py  test_tools.py
