[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentloop"
version = "0.1.0"
description = "Adaptive pipeline system with hypothesis-driven optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "NikasAl"}]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentloop = "agentloop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentloop = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
